--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -13,6 +13,6 @@
         assign_public_ip: yes
         wait: yes
         count: 2
-        aws_access_key_id: "{{access_key}}"
-        aws_secret_access_key: "{{secret_key}}"
-        aws_session_token: "{{session_token}}"
+        aws_access_key: "{{access_key}}"
+        aws_secret_key: "{{secret_key}}"
+        security_token: "{{session_token}}"
